tests/error/type_match/base_case_implicit_conversion2.bz
// error: unable to match expression of type 'float32' to 'float64'
function test()
{
	let _: float64 = 0.0f32;
}
